WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24552
Regression: Reflections break hit testing
https://bugs.webkit.org/show_bug.cgi?id=24552
Summary
Regression: Reflections break hit testing
Simon Fraser (smfr)
Reported
2009-03-12 11:05:57 PDT
Reflections interfere with hit testing in a bad way. Testcase coming.
Attachments
Testcase
(586 bytes, text/html)
2009-03-12 11:06 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, changelog, testcase
(6.84 KB, patch)
2009-03-12 12:23 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-03-12 11:06:14 PDT
Created
attachment 28535
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2009-03-12 12:23:49 PDT
Created
attachment 28539
[details]
Patch, changelog, testcase
Dave Hyatt
Comment 3
2009-03-12 12:24:52 PDT
Comment on
attachment 28539
[details]
Patch, changelog, testcase r=me
Simon Fraser (smfr)
Comment 4
2009-03-12 12:28:06 PDT
http://trac.webkit.org/changeset/41637
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug